--- a/.github/workflows/playwright-onDemand.yml
+++ b/.github/workflows/playwright-onDemand.yml
@@ -32,11 +32,11 @@ jobs:
     - uses: actions/checkout@v3
     - uses: actions/setup-node@v3
     - name: Install dependencies
-      run: npm ci
+      run: npm install
     - name: Install Playwright
       run: npx playwright install --with-deps
     - name: Build production build
-      run: npm run build
+      run: ng build --configuration=production --localize
     - name: Run playwright tests
       run: npm run playwright_test
     - name: Get current date
