--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dunamis-x",
   "description": "Web UI Template is a modern, responsive, and customizable web UI template for your business. It contains reusable components, theme color, and design support along with dark theme support.",
   "version": "4.0.12",
-  "license": "MIT", 
+  "license": "MIT",
   "scripts": {
     "buildLocal": "ng build --configuration=local --localize",
     "buildLocalToStagingApi": "ng build --configuration=local-to-staging-api --localize",
@@ -12,7 +12,7 @@
     "heroku-postbuild": "bash heroku.sh",
     "lint": "ng lint",
     "sitemap": "node src/sitemap-generator.ts > seo/sitemap.xml",
-    "ng": "ng",
+    "ng": "nx",
     "startLocal": "ng serve --configuration=local --port 4201",
     "startLocalFromIPhone": "ng serve --configuration=local --port 4201 --host 0.0.0.0 --disable-host-check true",
     "startLocalToStagingApi": "ng serve --configuration=local-to-staging-api --port 4201",
@@ -23,7 +23,8 @@
     "test": "ng test",
     "updateMessages": "ng extract-i18n && node ./src/messages-generator.js",
     "serve:local:en": "ng serve -c=local",
-    "serve:local:fr": "ng serve -c=fr"
+    "serve:local:fr": "ng serve -c=fr",
+    "postinstall": "node ./decorate-angular-cli.js"
   },
   "dependencies": {
     "@angular/animations": "^14.0.1",
@@ -37,6 +38,7 @@
     "@angular/router": "^14.0.1",
     "@angular/service-worker": "^14.0.1",
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "@nrwl/angular": "15.0.1",
     "@open-template-hub/animated-code-editor": "^4.0.2",
     "@open-template-hub/button": "^4.0.3",
     "@open-template-hub/card": "^4.0.2",
@@ -73,6 +75,8 @@
     "@angular/compiler-cli": "^14.0.1",
     "@angular/language-service": "^14.0.1",
     "@angular/localize": "^14.0.1",
+    "@nrwl/nx-cloud": "15.0.0",
+    "@nrwl/workspace": "15.0.1",
     "@types/jasmine": "^4.0.3",
     "@types/jasminewd2": "^2.0.9",
     "@types/node": "^18.0.4",
@@ -84,6 +88,7 @@
     "karma-coverage-istanbul-reporter": "^3.0.2",
     "karma-jasmine": "^5.0.1",
     "karma-jasmine-html-reporter": "^2.0.0",
+    "nx": "15.0.1",
     "protractor": "^7.0.0",
     "ts-node": "^10.8.0",
     "tslint": "^6.1.0",
