--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,3 +1,4 @@
+
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -7,7 +8,7 @@
     "declaration": false,
     "downlevelIteration": true,
     "experimentalDecorators": true,
-    "module": "es2020",
+    "module": "esnext",
     "moduleResolution": "node",
     "importHelpers": true,
     "target": "es2015",
@@ -24,4 +25,3 @@
     "fullTemplateTypeCheck": true,
     "strictInjectionParameters": true
   }
-}
